<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/widget_margin"
  >

  <ImageView
    android:id="@+id/widget_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    app:srcCompat="@mipmap/ic_launcher"/>
  <ImageButton
    android:id="@+id/widget_add_entry"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:contentDescription="@string/action_create_entry"
    app:srcCompat="@drawable/ic_add"/>

  <ImageButton
    android:id="@+id/widget_add_photo"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:contentDescription="@string/action_create_entry_with_image"
    app:srcCompat="@drawable/ic_add_photo"/>

  <ImageButton
    android:id="@+id/widget_add_audio"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:contentDescription="@string/action_create_entry_with_audio"
    app:srcCompat="@drawable/ic_add_audio"
    />

</LinearLayout>
