<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/fragment_observation_details"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:focusable="true"
  android:focusableInTouchMode="true"
  android:isScrollContainer="false"
  android:scrollbarAlwaysDrawVerticalTrack="false"
  android:scrollbars="none"
  tools:context=".ui.ObservationDetailsFragment">

  <TextView
    android:id="@+id/section_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@+id/fragment_observation_details"
    tools:layout_constraintLeft_creator="1"
    tools:layout_constraintTop_creator="1"/>
  <TextView
    android:id="@+id/text_observation_details_suspicion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/suspicion"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <EditText
    android:id="@+id/edit_observation_details_suspicion"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:hint="@string/suspicion_description"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_observation_details_suspicion"/>
  <TextView
    android:id="@+id/text_observation_details_comment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:text="@string/comment"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_observation_details_suspicion"/>
  <EditText
    android:id="@+id/edit_observation_details_comment"
    android:layout_width="0dp"
    android:layout_height="95dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:hint="@string/comment_description"
    android:inputType="textMultiLine"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_observation_details_comment"/>
  <TextView
    android:id="@+id/text_observation_details_tags"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:text="@string/tags"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_observation_details_comment"/>
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler_observation_details_tags"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintBottom_toTopOf="@+id/button_observation_details_create_tag"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_observation_details_tags"
    tools:listitem="@layout/tag_selection_item"/>
  <Button
    android:id="@+id/button_observation_details_create_tag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/action_add_tag"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />
  <TextView
    android:id="@+id/text_observation_details_location_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:text="@string/location"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_observation_details_comment"/>
  <TextView
    android:id="@+id/text_observation_details_location"
    android:textStyle="italic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:text="@string/unknown"
    app:layout_constraintBottom_toBottomOf="@+id/text_observation_details_location_title"
    app:layout_constraintStart_toEndOf="@+id/text_observation_details_location_title"
    app:layout_constraintTop_toTopOf="@+id/text_observation_details_location_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>
