<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.EntryActivity"
  tools:layout_editor_absoluteY="81dp">

  <EditText
    android:id="@+id/edit_suspicion"
    android:layout_width="0dp"
    android:layout_height="43dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/suspicion_description"
    android:inputType="text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_suspicion"/>

  <TextView
    android:id="@+id/text_suspicion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:text="@string/suspicion"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/text_comment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:text="@string/comment"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_suspicion"/>

  <EditText
    android:id="@+id/edit_comment"
    android:layout_width="0dp"
    android:layout_height="63dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:ems="10"
    android:hint="@string/comment_description"
    android:inputType="textMultiLine"
    android:singleLine="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_comment"/>
  <TextView
    android:id="@+id/text_tags"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:text="@string/tags"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_comment"/>
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler_tag_selection"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:scrollbars="horizontal"
    app:layout_constrainedHeight="true"
    app:layout_constraintBottom_toTopOf="@+id/button_save_observation"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text_tags"
    tools:listItem="@layout/tag_selection_item"
    tools:listitem="@layout/tag_selection_item"/>
  <Button
    android:id="@+id/button_save_observation"
    android:layout_width="130dp"
    android:layout_height="68dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="10dp"
    android:text="@string/save_observation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/button_add_photo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@drawable/ic_add_a_photo_white_24dp"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/button_add_audio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintBottom_toTopOf="@+id/button_add_photo"
    app:layout_constraintEnd_toEndOf="parent"
    app:srcCompat="@drawable/ic_mic_white_24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
